# proxmox-firewall

./: .gitignore  Cargo.toml  Makefile  defines.mk
debian/: changelog  control  copyright  proxmox-firewall.install  proxmox-firewall.service  rules
proxmox-firewall/: Cargo.toml
proxmox-firewall/resources/: proxmox-firewall.nft
proxmox-firewall/src/: config.rs  firewall.rs  lib.rs  main.rs  object.rs  rule.rs
proxmox-firewall/tests/: integration_tests.rs
proxmox-firewall/tests/input/: .running-config.json  100.conf  100.fw  101.conf  101.fw  chains.json  cluster.fw  host.fw  ipam.db
proxmox-firewall/tests/snapshots/: integration_tests__firewall.snap
proxmox-nftables/: Cargo.toml
proxmox-nftables/src/: client.rs  command.rs  expression.rs  helper.rs  lib.rs  statement.rs  types.rs
proxmox-ve-config/: Cargo.toml
proxmox-ve-config/resources/: ct_helper.json  macros.json
proxmox-ve-config/src/: lib.rs
proxmox-ve-config/src/firewall/: cluster.rs  common.rs  ct_helper.rs  fw_macros.rs  guest.rs  host.rs  mod.rs  parse.rs  ports.rs
proxmox-ve-config/src/firewall/types/: address.rs  alias.rs  group.rs  ipset.rs  log.rs  mod.rs  port.rs  rule.rs  rule_match.rs
proxmox-ve-config/src/guest/: mod.rs  types.rs  vm.rs
proxmox-ve-config/src/host/: utils.rs
