[package]
name = "proxmox-firewall"
version = "1.0.0"
edition = "2024"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Stefan Hanreich <s.hanreich@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
description = "Proxmox VE nftables firewall implementation"
license = "AGPL-3"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

signal-hook = "0.3"

proxmox-nftables = { path = "../proxmox-nftables", features = ["config-ext"] }
proxmox-ve-config = { workspace = true }

[dev-dependencies]
insta = { version = "1.21", features = ["json"] }
proxmox-sys = "1"
