[package]
name = "proxmox-firewall"
version = "1.2.1"
edition = "2024"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Stefan Hanreich <s.hanreich@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
description = "Proxmox VE nftables firewall implementation"
license = "AGPL-3"

[dependencies]
anyhow = "1"

pico-args = "0.5"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

signal-hook = "0.3"

proxmox-log = "1"
proxmox-network-types = { workspace = true }
proxmox-network-api = { version = "1", features = [ "impl" ] }
proxmox-nftables = { path = "../proxmox-nftables", features = ["config-ext"] }
proxmox-ve-config = { workspace = true }

[dev-dependencies]
insta = { version = "1.21", features = ["json"] }
proxmox-sys = "1"
