[package]
name = "proxmox-firewall"
description = "Proxmox VE nftables firewall implementation"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true

pico-args.workspace = true

serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true

signal-hook.workspace = true

proxmox-log.workspace = true
proxmox-network-types.workspace = true
proxmox-network-api = { workspace = true, features = [ "impl" ] }
proxmox-nftables = { workspace = true, features = [ "config-ext" ] }
proxmox-ve-config.workspace = true

[dev-dependencies]
insta = { workspace = true, features = [ "json" ] }
proxmox-sys.workspace = true
