[package]
name = "proxmox-nftables"
version = "0.1.0"
edition = "2021"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Stefan Hanreich <s.hanreich@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
description = "Proxmox VE nftables"
license = "AGPL-3"

[features]
config-ext = ["dep:proxmox-ve-config"]

[dependencies]
log = "0.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_plain = "1"

proxmox-ve-config = { path = "../proxmox-ve-config", optional = true }
