[package]
name = "proxmox-nftables"
version = "0.1.0"
edition = "2024"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Stefan Hanreich <s.hanreich@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
description = "Proxmox VE nftables"
license = "AGPL-3"

[features]
config-ext = ["dep:proxmox-ve-config", "dep:proxmox-network-types"]

[dependencies]
log = "0.4"
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_plain = "1"

proxmox-ve-config = { workspace = true, optional = true }
proxmox-network-types = { workspace = true, optional = true }
