[package]
name = "proxmox-nftables"
version = "0.1.0"
description = "Proxmox VE nftables"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[features]
config-ext = ["dep:proxmox-ve-config", "dep:proxmox-network-types"]

[dependencies]
anyhow.workspace = true
log.workspace = true
thiserror.workspace = true

serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true

proxmox-serde.workspace = true

proxmox-ve-config = { workspace = true, optional = true }
proxmox-network-types = { workspace = true, optional = true }
