[package]
name = "proxmox-ve-config"
version = "0.1.0"
edition = "2021"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
    "Stefan Hanreich <s.hanreich@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
description = "Proxmox VE config parsing"
license = "AGPL-3"

[dependencies]
log = "0.4"
anyhow = "1"
nix = "0.26"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_plain = "1"
serde_with = "2.3.3"

proxmox-schema = "3.1.0"
proxmox-sys = "0.5.3"
proxmox-sortable-macro = "0.1.3"
